--- a/index.html
+++ b/index.html
@@ -1,54 +1,223 @@
-<html>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
 <head>
-	<title>NP Overflow SIG</title>
-	<meta name=viewport content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/normalize.css">
-	<link rel="stylesheet" href="assets/css/foundation.css">
-	<link rel="stylesheet" href="assets/css/index.css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Overflow</title>
+	<meta name="description" content="Ngee Ann Polytechnic School of ICT Hack Club">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<script src="js/app.js"></script>
+	<script src="js/vendor.js"></script>
+	<script>require('initialize')</script>
+	<link rel="stylesheet" href="css/app.css">
+
 </head>
+
 <body>
-	<div class="row">
-		<div class="small-8 small-centered medium-12 large-5 columns">
-			<img id="logo" src="assets/images/logo.png" alt="NP Overflow logo">
-			<h1 id="title">Overflow</h1>
+	<!-- Begone IE >:( -->
+	<!--[if lt IE 7]>
+			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+		<![endif]-->
+	<header class="navbar">
+		<section class="navbar-section hide-xs">
+			<img height="100px" src="images/logo-black.png" alt="logo">
+		</section>
+		<section class="navbar-section show-xs"></section>
+		<section class="navbar-center show-xs">
+			<img height="100px" src="images/logo-black.png" alt="logo">
+		</section>
+		<section class="navbar-section show-xs"></section>
+		<section class="navbar-section hide-xs">
+			<a href="https://tinyurl.com/ICTCCAFiesta-2018" class="btn btn-link">Join Us</a>
+			<div class="divider-vert"></div>
+			<a href="https://github.com/np-overflow" class="btn btn-link tooltip  tooltip-bottom" data-tooltip="GitHub">
+				<img src="/images/github.svg" alt="Github">
+			</a>
+			<a href="https://www.instagram.com/npoverflow/" class="btn btn-link  tooltip tooltip-bottom" data-tooltip="Instagram">
+				<img src="images/instagram.svg" alt="Instagram">
+			</a>
+		</section>
+	</header>
+	<div class="container landing centered">
+		<h1>
+			<span class="element"></span>
+		</h1>
+		<h5>a place to inspire builders of the next generation.</h5>
+	</div>
+
+	<div class="container section padded">
+		<div class="columns">
+			<div class="container col-12 text-break columns">
+				<div class="col-4 col-xl-6 col-md-7 col-xs-9 col-mx-auto">
+					<h3>About Us</h3>
+					Hi! We are NP's Overflow SIG, a collective of like-minded individuals passionate in coding, software development, and technology.
+					<br>
+					<br> Overflow aims to become the breeding ground for the creators of the next generation; by providing opportunities to
+					pick up extracurricular skills & outlets to exhibit our very own creations.
+					<span class="show-xs">
+				</div>
+			</div>
+			<div class="col-3 col-mx-auto padded">
+				<div class="divider"></div>
+			</div>
+			<div class="container columns col-12">
+				<div class="container col-4 col-xl-6 col-md-7 col-xs-9 col-mx-auto">
+					<h3>Whats going on?</h3>
+					<div class="timeline">
+						<div class="timeline-item" id="timeline-example-1">
+							<div class="timeline-left">
+								<a class="timeline-icon" href=""></a>
+							</div>
+							<div class="timeline-content">
+								<p class="tile-subtitle h6">April 2018</p>
+								<p class="tile-title text-primary">CCA Fiesta Display</p>
+							</div>
+						</div>
+						<div class="timeline-item" id="timeline-example-1">
+							<div class="timeline-left">
+								<a class="timeline-icon" href=""></a>
+							</div>
+							<div class="timeline-content">
+								<p class="tile-subtitle h6">GopherCon SG, Pycon SG... (TBC)</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="small-8 small-centered medium-12 large-5 columns">
-			<h4 id="tagline">a place to inspire builders of the next generation</h4>
+
+	<div class="columns padded">
+		<div class="columns padded col-6 col-xs-12 col-mx-auto">
+			<div class="col-8 col-mx-auto">
+				<h1>What we do.</h1>
+				Nerd stuff, coding workshops, any fun/silly/innovative projects, outings to developer events,
+				<i>hackathons??</i>,
+				<i>anything as long as it's related to tech tbh</i>, and much more...
+			</div>
+		</div>
+		<div class="parallax col-xl-6 col-3 col-xs-12 col-mr-auto">
+			<div class="parallax-top-left" tabindex="1"></div>
+			<div class="parallax-top-right" tabindex="2"></div>
+			<div class="parallax-bottom-left" tabindex="3"></div>
+			<div class="parallax-bottom-right" tabindex="4"></div>
+			<div class="parallax-content red-red">
+				<div class="parallax-front">
+					<h2>iOS & Android Apps</h2>
+				</div>
+				<div class="parallax-back">
+					<img src="images/iphone.png" class="img-responsive rounded" ...>
+				</div>
+			</div>
+		</div>
+		<div class="parallax col-xl-4 col-md-6 col-3 col-xs-12 col-mr-auto">
+			<div class="parallax-top-left" tabindex="1"></div>
+			<div class="parallax-top-right" tabindex="2"></div>
+			<div class="parallax-bottom-left" tabindex="3"></div>
+			<div class="parallax-bottom-right" tabindex="4"></div>
+			<div class="parallax-content green-af">
+				<div class="parallax-front">
+					<h2>Web Development</h2>
+				</div>
+				<div class="parallax-back">
+					<img src="/images/web.png" class="img-responsive rounded" ...>
+				</div>
+			</div>
+		</div>
+		<div class="parallax col-xl-4 col-md-6 col-6 col-xs-12 col-mr-auto">
+			<div class="parallax-top-left" tabindex="1"></div>
+			<div class="parallax-top-right" tabindex="2"></div>
+			<div class="parallax-bottom-left" tabindex="3"></div>
+			<div class="parallax-bottom-right" tabindex="4"></div>
+			<div class="parallax-content stupid-blue">
+				<div class="parallax-front">
+					<h2>Version Control</h2>
+				</div>
+				<div class="parallax-back">
+					<img src="/images/vcs.png" class="img-responsive rounded" ...>
+				</div>
+			</div>
+		</div>
+		<div class="parallax col-xl-4 col-md-6 col-6 col-xs-12 col-mr-auto">
+			<div class="parallax-top-left" tabindex="1"></div>
+			<div class="parallax-top-right" tabindex="2"></div>
+			<div class="parallax-bottom-left" tabindex="3"></div>
+			<div class="parallax-bottom-right" tabindex="4"></div>
+			<div class="parallax-content banana-yellow">
+				<div class="parallax-front">
+					<h2>Anything else to do with tech tbh</h2>
+				</div>
+				<div class="parallax-back">
+					<img src="/images/development.png" class="img-responsive rounded" ...>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="items row">
-		<div class="small-12 medium-4 large-4 columns">
-			<div class="item_picture_holder">
-				<img class="item_picture" src="assets/images/iphone.png" alt="Picture of an iPhone">
+	</div>
+
+	<div class="container section padded">
+		<h2 class="centered">Members</h2>
+		<br>
+		<div class="columns">
+			<div class="container col-5 col-xl-6 col-md-9 col-sm-11 col-mx-auto centered">
+				<a href="http://www.ravernkoh.me/">
+					<figure class="avatar avatar-xl tooltip tooltip-bottom" data-tooltip="Ravern">
+						<img src="images/Avatars/1.png" alt="icon">
+					</figure>
+				</a>
+				<a href="http://leafybeef.com">
+					<figure class="avatar avatar-xl tooltip tooltip-bottom" data-tooltip="Sheline">
+						<img src="images/Avatars/2.png" alt="icon">
+					</figure>
+				</a>
+				<a href="https://sean1188.github.io">
+					<figure class="avatar avatar-xl tooltip tooltip-bottom" data-tooltip="Sean">
+						<img src="images/Avatars/3.png" alt="icon">
+					</figure>
+				</a>
+				<a href="https://github.com/Kaioru">
+					<figure class="avatar avatar-xl tooltip tooltip-bottom" data-tooltip="Keith">
+						<img src="images/Avatars/4.png" alt="icon">
+					</figure>
+				</a>
+				<a href="https://www.instagram.com/nigglett/">
+					<figure class="avatar avatar-xl tooltip tooltip-bottom" data-tooltip="Wan Ning">
+						<img src="images/Avatars/5.png" alt="icon">
+					</figure>
+				</a>
 			</div>
-			<h5 class="item_title">iOS &amp; Android Development</h5>
-			<h6 class="item_description">Ever though about building your own mobile app?</h6>
 		</div>
-		<div class="small-12 medium-4 large-4 columns">
-			<div class="item_picture_holder">
-				<img class="item_picture" src="assets/images/chrome.png" alt="Picture of the Chrome browser logo">
-			</div>
-			<h5 class="item_title">HTML &amp; CSS</h5>
-			<h6 class="item_description">A course on the foundations of building a simple website.</h6>
-		</div>
-		<div class="small-12 medium-4 large-4 columns">
-			<div class="item_picture_holder">
-				<img class="item_picture" src="assets/images/mindstorms.png" alt="Picture of a LEGO Mindstorms EV3">
-			</div>
-			<h5 class="item_title">LEGO Mindstorms EV3</h5>
-			<h6 class="item_description">Workshop on building programs to run on the LEGO EV3 kit.</h6>
+		<div id= "members" class="padded container col-4 col-xl-6 col-md-9 col-sm-11 col-mx-auto centered">
+			<script id="avatar-template" type="text/x-handlebars-template">
+				<figure class="avatar avatar-lg tooltip tooltip-bottom" data-initial="{{initial}}" data-tooltip="{{name}}"></figure>
+	</script>
 		</div>
 	</div>
-	<div class="items row">
-		<div class="small-12 small-centered medium-4 large-4 columns">
-			<div class="item_picture_holder">
-				<img class="item_picture" src="assets/images/git.png" alt="Picture of a LEGO Mindstorms EV3">
+
+	<div class="container section padded">
+		<div class="columns">
+			<div class="col-12 columns">
+				<div class="col-4 col-xl-6 col-md-7 col-xs-9 col-mx-auto">
+					<h2>Join us</h2>
+					<h6>
+						<i>For just $399</i>
+					</h6>
+					Jokes. But seriously do <a href="https://tinyurl.com/ICTCCAFiesta-2018">Join Us</a> with an open mind; you are not expected or required to have any knowledge in coding/programming.
+				</div>
 			</div>
-			<h5 class="item_title">Git Version Control</h5>
-			<h6 class="item_description">Starting your very first Git repository.</h6>
 		</div>
 	</div>
+
+
+	<footer class="">
+		<a href="https://sean1188.github.io">Sean Lim</a> // 2018</footer>
 </body>
+
 </html>
