--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 		<section class="navbar-section hide-xs">
 			<a href="https://tinyurl.com/ICTCCAFiesta-2018" class="btn btn-link">Join Us</a>
 			<div class="divider-vert"></div>
-			<a href="https://github.com/np-overflow" class="btn btn-link tooltip  tooltip-bottom" data-tooltip="GitHub">
-				<img src="/images/github.svg" alt="Github">
+			<a href="https://github.com/np-overflow" class="btn btn-link tooltip tooltip-bottom" data-tooltip="GitHub">
+				<img class="social-handle" src="images/github.svg" alt="Github">
 			</a>
-			<a href="https://www.instagram.com/npoverflow/" class="btn btn-link  tooltip tooltip-bottom" data-tooltip="Instagram">
-				<img src="images/instagram.svg" alt="Instagram">
+			<a href="https://www.instagram.com/npoverflow/" class="btn btn-link tooltip tooltip-bottom" data-tooltip="Instagram">
+				<img class="social-handle" src="images/instagram.svg" alt="Instagram">
 			</a>
 		</section>
 	</header>
@@ -127,7 +127,7 @@
 					<h2>Web Development</h2>
 				</div>
 				<div class="parallax-back">
-					<img src="/images/web.png" class="img-responsive rounded" ...>
+					<img src="images/web.png" class="img-responsive rounded" ...>
 				</div>
 			</div>
 		</div>
@@ -141,7 +141,7 @@
 					<h2>Version Control</h2>
 				</div>
 				<div class="parallax-back">
-					<img src="/images/vcs.png" class="img-responsive rounded" ...>
+					<img src="images/vcs.png" class="img-responsive rounded" ...>
 				</div>
 			</div>
 		</div>
@@ -155,7 +155,7 @@
 					<h2>Anything else to do with tech tbh</h2>
 				</div>
 				<div class="parallax-back">
-					<img src="/images/development.png" class="img-responsive rounded" ...>
+					<img src="images/development.png" class="img-responsive rounded" ...>
 				</div>
 			</div>
 		</div>
@@ -209,7 +209,17 @@
 					<h6>
 						<i>For just $399</i>
 					</h6>
-					Jokes. But seriously do <a href="https://tinyurl.com/ICTCCAFiesta-2018">Join Us</a> with an open mind; you are not expected or required to have any knowledge in coding/programming.
+					<p>
+						Jokes. But seriously do <a href="https://tinyurl.com/ICTCCAFiesta-2018">Join Us</a> with an open mind; you are not expected or required to have any knowledge in coding/programming.
+					</p>
+					<div class="columns">
+						<a href="https://github.com/np-overflow" class="btn btn-link tooltip tooltip-bottom show-xs col-2" data-tooltip="GitHub">
+							<img class="social-handle" src="images/github.svg" alt="Github">
+						</a>
+						<a href="https://www.instagram.com/npoverflow/" class="btn btn-link tooltip tooltip-bottom show-xs col-2" data-tooltip="Instagram">
+							<img class="social-handle" src="images/instagram.svg" alt="Instagram">
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
