--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 
 	<footer class="">
-		<a href="https://sean1188.github.io">Sean Lim</a> // 2018</footer>
+		<a href="https://www.np.edu.sg">Ngee Ann Polytechnic</a> // 2018</footer>
 </body>
 
 </html>
