--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+	<script>
+		// Redirect to the new website
+		window.location = "https://np-overflow.club"
+	</script>
 	<title>NP Overflow SIG</title>
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/normalize.css">
